<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/lightWhite"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:background="@drawable/men_shop_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/shopIv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_shop"
            app:c_border="true"
            app:c_border_width="1dp"
            app:c_border_color="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/shopIv"
            android:layout_toStartOf="@+id/next"
            >
            <TextView
                android:id="@+id/seller_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bg"
                android:padding="5dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/seller_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/email"
                android:layout_below="@+id/seller_username"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/seller_phoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/phone_number"
                android:layout_below="@+id/seller_email"
                android:textColor="@color/black"
                />

        </LinearLayout>
        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_next"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>