<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Common.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:elevation="3dp"
            app:cardCornerRadius="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient"
                    android:gravity="center"
                    android:orientation="vertical">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_profile_pic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_person_white_24dp"
                        app:civ_border_color="#ffffff"
                        app:civ_border_width="2dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/register"
                        android:textColor="#ffffff"
                        android:textSize="22sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-10dp"
                    android:rotation="45"
                    android:src="@drawable/rectangle" />


                <RelativeLayout
                    android:id="@+id/relativeLayoutFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageViewUserIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#838988"
                        android:padding="8dp"
                        android:src="@drawable/ic_account_circle_black_24dp"
                        app:tint="@color/white" />

                    <EditText

                        android:id="@+id/fullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageViewUserIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewUserIcon"
                        android:background="@color/editTextBackground"
                        android:hint="@string/name"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayoutUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayoutFullName"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageViewUsernameIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#838988"
                        android:padding="8dp"
                        android:src="@drawable/ic_account_circle_black_24dp"
                        app:tint="@color/white" />

                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageViewUsernameIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewUsernameIcon"
                        android:background="@color/editTextBackground"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relativeLayoutPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayoutUserName"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageViewPhone"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#838988"
                        android:padding="8dp"
                        android:src="@drawable/ic_smartphone_black_24dp"
                        app:tint="@color/white" />

                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/phoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:layout_alignBottom="@+id/imageViewPhone"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewPhone"
                        android:background="@color/editTextBackground"
                        android:hint="@string/phone_number"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relativeLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayoutPhoneNo"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageViewEmailIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#838988"
                        android:padding="8dp"
                        android:src="@drawable/ic_email_black_24dp"
                        app:tint="@color/white" />

                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageViewEmailIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewEmailIcon"
                        android:background="@color/editTextBackground"
                        android:hint="@string/email"
                        android:paddingLeft="20dp"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relativeLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayoutEmail"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageViewPasswordIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#838988"
                        android:padding="8dp"
                        android:src="@drawable/ic_lock_black_24dp"
                        app:tint="@color/white" />

                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageViewPasswordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewPasswordIcon"
                        android:background="@color/editTextBackground"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayoutConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayoutPassword"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageViewConfirmPasswordIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#838988"
                        android:padding="8dp"
                        android:src="@drawable/ic_lock_black_24dp"
                        app:tint="@color/white" />

                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/ConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageViewConfirmPasswordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewConfirmPasswordIcon"
                        android:background="@color/editTextBackground"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayoutRegistrationNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayoutConfirmPassword"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageViewRegiIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#838988"
                        android:padding="8dp"
                        android:src="@drawable/ic_library_books_black_24dp"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/nicNo"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageViewRegiIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewRegiIcon"
                        android:background="@color/editTextBackground"
                        android:hint="@string/nic_no"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/typeBuyer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayoutRegistrationNumber"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_btn_buyer"
                    android:padding="8dp"
                    android:text="@string/buyer"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/typeSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayoutRegistrationNumber"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/typeBuyer"
                    android:background="@drawable/round_btn_seller"
                    android:padding="8dp"
                    android:text="@string/seller"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/idSignUp"
                    android:padding="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:layout_below="@+id/typeSeller"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/signup"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/round_btn"
                    />

                <TextView
                    android:id="@+id/idAllreadyRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idSignUp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/already_registered_then_sign_in"
                    android:textAlignment="center"
                    android:textColor="#083ee2"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>
    </ScrollView>

</RelativeLayout>